create main design (without responsive)

--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Digital clock</title>
 </head>
 <body>
 
     <div class="main-screen-bg">
+        <div class="main-clock">
+            <div class="our"><span>01</span></div>
+                <div class="double-dot">:</div>
+            <div class="minutes"><span>01</span></div>
+                <div class="double-dot">:</div>
+            <div class="seconds"><span>01</span></div>
+        </div>
 
+        <div class="date">
+            <div class="number-of-day"><span>01</span></div>
+            <div class="name-of-day"><span>monday</span></div>
+        </div>
     </div>
 
     <script src="main.js"></script>
