add ainmation (commented)

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="main-screen-bg">
         <div class="main-clock">
             <div class="our"><span>01</span></div>
-                <div class="double-dot">:</div>
+                <div class="double-dot pulse">:</div>
             <div class="minutes"><span>01</span></div>
-                <div class="double-dot">:</div>
+                <div class="double-dot pulse">:</div>
             <div class="seconds"><span>01</span></div>
         </div>
 
