create js code for this clock, 24-format times.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <div class="main-screen-bg">
         <div class="main-clock">
-            <div class="our"><span>01</span></div>
+            <div class="hour"><span id="hour">01</span></div>
                 <div class="double-dot pulse">:</div>
-            <div class="minutes"><span>01</span></div>
+            <div class="minutes"><span id="minute">01</span></div>
                 <div class="double-dot pulse">:</div>
-            <div class="seconds"><span>01</span></div>
+            <div class="seconds"><span id="second">01</span></div>
         </div>
 
         <div class="date">
-            <div class="number-of-day"><span>01</span></div>
-            <div class="name-of-day"><span>monday</span></div>
+            <div class="number-of-day"><span id="number-of-day">01</span></div>
+            <div class="name-of-day"><span id="name-date">monday</span></div>
         </div>
     </div>
 
